- Fixed navbar icon gap - Complied scss into css

--- a/assets/html/scss/documenter/layout/_main.scss
+++ b/assets/html/scss/documenter/layout/_main.scss
@@ -59,6 +59,8 @@
           display: inline-block;
         }
         white-space: nowrap;
+        gap: 1rem;
+        align-items: center;
         .docs-label {
           padding: 0;
           margin-left: 0.3em;
@@ -68,9 +70,6 @@
         }
         .docs-navbar-link {
           margin: auto 0.5rem auto 0.5rem;
-        }
-        .docs-article-toggle-button {
-          padding: 0.2rem;
         }
         @include touch {
           .docs-navbar-link {
