--- a/assets/html/themes/documenter-dark.css
+++ b/assets/html/themes/documenter-dark.css
@@ -8119,6 +8119,8 @@ html.theme--documenter-dark {
       border-bottom: 1px solid #5e6d6f; }
       html.theme--documenter-dark .docstring > header code {
         background-color: transparent; }
+      html.theme--documenter-dark .docstring > header .docstring-article-toggle-button {
+        padding: 0.2rem 0.2rem 0.2rem 0; }
       html.theme--documenter-dark .docstring > header .docstring-binding {
         margin-right: 0.3em; }
       html.theme--documenter-dark .docstring > header .docstring-category {
@@ -8235,7 +8237,9 @@ html.theme--documenter-dark {
       flex-grow: 1; }
     html.theme--documenter-dark #documenter .docs-main header.docs-navbar .docs-right {
       display: flex;
-      white-space: nowrap; }
+      white-space: nowrap;
+      gap: 1rem;
+      align-items: center; }
       html.theme--documenter-dark #documenter .docs-main header.docs-navbar .docs-right .docs-icon, html.theme--documenter-dark #documenter .docs-main header.docs-navbar .docs-right .docs-label, html.theme--documenter-dark #documenter .docs-main header.docs-navbar .docs-right .docs-sidebar-button {
         display: inline-block; }
       html.theme--documenter-dark #documenter .docs-main header.docs-navbar .docs-right .docs-label {
